# EGG

./: .gitignore  BI-52864.py  CHANGELOG  CHANGELOG.md  CITATION.bib  README.md  Trial.ipynb  dry_run_simclr.json  nest.txt  reformat_visa.py  requirements.txt  requirements36.txt  setup.cfg  setup.py  tox.ini  visa.npz
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
adjusted_objects_game/: README.md  features.py  train.py
ancm/: README.md  archs.py  custom_callbacks.py  export_visa.py  features.py  hyperparam_search.py  hyperparam_to_latex.py  reformat_visa.py  requirements.txt  run_all.py  run_baseline.sh  search_hyperparams.py  train.py  trainers.py  util.py  visa.csv
ancm-generated/: README.md  custom_callbacks.py  run_baseline.sh  run_training.sh  train.py
ancm-generated/runs/: baseline-messages.msg  baseline-results.txt
ancm-visa/: archs.py  custom_callbacks.py  export_visa.py  reformat_visa.py  requirements.txt
ancm-visa/data/: visa-homonyms.csv
ancm-visa/run_commands/: train.sh  train_1000.sh  train_2.5k.sh  train_animals_5k.sh  train_animals_5k_gs.sh
ancm/data/: make_data_correct.ipynb  visa-homonyms.csv  visa-no-homonyms.csv  (+1 more)
docs/: CL.md  nest.md  tensorboard.md
runs/: baseline-results.json  baseline-training-history.csv
scripts/: check_copyright.py
tests/: test_agent_wrappers.py  test_concurrent_wrapper.py  test_games_do_not_fail.py  test_toy_counting.py  test_trainer.py  test_utils.py
tutorials/: EGG walkthrough with a MNIST autoencoder.ipynb
(+897 files in other folders)
