[metadata]
license_file = LICENSE


[flake8]
ignore = E731, E203, W503
per-file-ignores =
    # line too long in a doctest output
    egg/core/interaction.py: E501
exclude =
    egg/zoo,
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
max-line-length = 120


[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88


[black]
exclude = "egg/zoo"
